секундамер с применением MVVM

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+    //LiveData для использования extension asLiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
