--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,15 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Koin
+    //Текущая версия библиотеки
+    def koin_version= "3.1.2"
+    //Основная библиотека
+    implementation "io.insert-koin:koin-core:$koin_version"
+    //Koin для поддержки Android (Scope,ViewModel ...)
+    implementation "io.insert-koin:koin-android:$koin_version"
+    //Для совместимости с Java
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    testImplementation "io.insert-koin:koin-test:$koin_version"
 }
